Views Calendar 6.x
==================

See documentation at http://drupal.org/node/262064.

Version 2.0 dev
=================

- Make sure node stripes aren't created when there is no stripe color set.
- Don't truncate fields if there is no truncate value.
- Fix field name code in default view, don't add '_value' to core fields!
- Make sure default view doesn't make any assumptions about available content types.
- #337635 Make sure Views doesn't limit the calendar results to 10 items in the calendar style.
- #338515 Initialize $date_field_options to avoid error when editing style.
- Consolidate error messages about missing Date arguments so we don't get the message repeated, and add more info about how to fix.
- #337635 Make sure max_items defaults to unlimited.
- Remove deprecated iCal code left over from old method of importing feeds.
- #337665 Fix bad variable name that kept month titles from showing.
- #337664 Add warning message when selecting terms if no vocabulary has been set yet.
- #337646 We only need a single Advanced Help icon for Calendar settings.

Version 2.0 rc5
=================

New Features:
=============
- Update day and week view to use new configurable, agenda-style calendar views grouped by hour.
- #337004 By hotspoons: Add settings to display calendar legend colors based on taxonomy.
- #319344 By MothersClick.com: Add updated css styles, settings to truncate titles in calendar cells 
  and limit the number of events that display in calendar cells.
- Make default calendar view configurable so we can create default calendars for specific date fields.
- Add a date_embed_view() function to provide a way to embed views and have their navigation move 
  either together or separately, and document it in Advanced help.
- Start building Advanced help instructions, including how to do iCal import using Feed API.
- #290365 Add upcoming events block to default calendar.

Other:
======